--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @posts.each do |post| %>
+	<h2><%=h post.title %></h2>
+	<p><%=h post.body.gsub( /\n\n/, "</p><p>" ).gsub( /\n/, "<br />" ) %></p>
+<% end %>
+<br />
+<%= link_to 'New post', new_post_path %>
