--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,6 @@
-	<div id="nav" class="clearfix">
-		<ul id="menu" class="clearfix">
-			<li><%= link_to "home", root_url %></li>
-			<li><%= link_to "blog", root_url %></li>
-			<li><%= link_to "code", "#" %></li>
-			<li><%= link_to "contact", "#" %></li>
-		</ul>
-	</div>
+			<ul id="nav" class="clearfix">
+				<li><%= link_to "home", root_url %></li>
+				<li><%= link_to "blog", root_url %></li>
+				<li><%= link_to "code", "#" %></li>
+				<li><%= link_to "contact", "#" %></li>
+			</ul>
