--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,28 @@
 <%= render 'layouts/stylesheets' %>
 </head>
 <body>
-	<div id="container">
-		<div id="header" class="clearfix">
-			<h1>CodingPrime</h1>
+	<div id="header" class="clearfix">
+		<div id="headercontent">
+			<h1><%= link_to '#coding <span>Prime</span>', root_url %></h1>
+			<!--
 			<p>
 				<span>&lt;blurb&gt;</span>insert witty text here<span>&lt;/blurb&gt;</span>
 			</p>
+			-->
+<%= render 'layouts/nav' %>
 		</div>
+	</div>
+	<div id="container" class="clearfix">
 		<div id="content">
 <%= yield %>
 		</div>
-		<div id="footer">
+		<div id="sidebar">
+			<%= link_to image_tag( "gentoo-badge3.png" ), "http://www.gentoo.org" %>
+			<%= link_to image_tag( "palink.gif" ), "http://www.penny-arcade.com" %>
+			<%= link_to image_tag( "dronezone.gif" ), "http://www.somafm.com" %>
 		</div>
 	</div>
-<%= render 'layouts/nav' %>
+	<div id="footer">
+	</div>
 </body>
 </html>
