--- a/public/stylesheets/codingprime.css
+++ b/public/stylesheets/codingprime.css
@@ -2,10 +2,26 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: #000000 url( '../images/background.jpg' ) top left repeat;
-	background-color: #000000;
+	background: #928ebb;
 	font-size: 70%;
 	font-family: verdana, arial, sans-serif;
+}
+
+a {
+	color: #0e0940;
+}
+
+img {
+	border: 0 none;
+}
+
+h2 {
+	margin-bottom: 0;
+	border-bottom: 1px dotted #999999;
+}
+
+h2 a {
+	text-decoration: none;
 }
 
 fieldset {
@@ -24,49 +40,81 @@ fieldset {
 	text-align: center;
 }
 
-#container {
-	width: 800px;
-	margin: 20px auto 0 auto;
-	background-color: #ffffff;
-}
-
 #header {
-	background: #ff7900 url( '../images/header_bg.jpg' ) top left repeat-y;
-	color: #ffffff;
+	background: #dac1a1;
 	font-size: 1.2em;
-	border-top: 2px solid #ffffff;
-	border-left: 2px solid #ffffff;
-	border-right: 2px solid #ffffff;
 	font-family: "Trebuchet MS", "Lucida Grande", arial, helvetica, sans-serif;
-	height: 80px;
+	border-bottom: 10px solid #7b6b59;
 }
 
-#header h1 {
+#headercontent {
+	background: #0e0940;
+	width: 800px;
+	margin: 0 auto;
+	padding: 10px 0;
+}
+
+#headercontent h1 {
 	margin: 10px 0 0 10px;
+}
+
+#headercontent h1 a {
+	color: #90cb84;
+	text-decoration: none;
+	font-family: courier, times, serif;
+}
+
+#headercontent h1  a span {
+	color: #ffffff;
+	font-variant: small-caps;
+	font-style: italic;
+	font-family: georgia;
+	font-size: 1.3em;
+}
+
+#headercontent p {
+	margin: .5em 0 .5em 10px;
+	font-style: italic;
+	text-transform: uppercase;
+	color: #dec1a1;
+}
+
+#headercontent p span {
+	font-weight: bold;
+	font-style: normal;
+	color: #5c360c;
+}
+
+#nav {
+	position: absolute;
+	bottom: 0;
+	text-decoration: none;
+	margin: .2em 1em;
+	padding: 0;
+	display: none;
+}
+
+#nav li {
+	display: inline-block;
+	width: 5em;
+}
+
+#nav li a {
+	text-decoration: none;
+	color: #ffffff;
 	font-variant: small-caps;
 }
 
-#header h1 a {
-	color: #ffffff;
-	text-decoration: none;
+#nav li a:hover {
+	text-decoration: underline;
+	color: #002670;
 }
-
-#header p {
-	margin: .5em 0 .5em 10px;
-	font-style: italic;
-	font-weight: bold;
-	text-transform: uppercase;
-}
-
-#header p span {
-	font-style: normal;
-}
-
+/*
 #nav {
 	width: 796px;
 	overflow: hidden;
 	position: absolute;
-	top: 100px;
+	top: 84px;
 	left: 50%;
 	margin: 0 0 0 -398px;
 	padding: 0;
@@ -114,9 +162,31 @@ fieldset {
 #menu li a:hover {
 	background: url( '../images/menu_bg_on.gif' ) top left repeat-x;
 }
+*/
+
+#container {
+	width: 790px;
+	margin: 0 auto;
+	padding: 5px;
+	background-color: #ffffff;
+}
 
 #content {
-	padding: 25px 10px;
+	padding: 5px 10px 30px 10px;
+	width: 600px;
+	float: left;
+	border: 1px solid #90cb84;
+}
+
+#sidebar {
+	width: 160px;
+	float: left;
+	margin-left: 5px;
+}
+
+.dateline {
+	font-size: .8em;
+	color: #303030;
 }
 
 dl.formfields {
