--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 			<% div_for post do %>
 				<h2><%= link_to_unless_current h(post.title), post.url %></h2>
-				<span class="dateline"><%= post.created_at.to_s( :datetime ) %></span>
+				<span class="dateline"><%= post.created_at.to_s( :long_ordinal ) %></span>
 				<%= post.rendered_body %>
 				<% if admin? %>
 				<%= link_to 'Edit', edit_post_path( post ) %>
