--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 	</div>
 	<div id="container" class="clearfix">
 		<div id="content">
+<%= render 'shared/display_flash' %>
 <%= yield %>
 		</div>
 		<div id="sidebar">
