--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New comment</h1>
 
-<% form_for(@comment) do |f| %>
+<% form_for [@post, @comment] do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -44,4 +44,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Back', post_comments_path %>
