--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
 	<title><%= page_title %></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <%= render 'layouts/stylesheets' %>
-<%= stylesheet_link_tag :harsh %>
+<%= stylesheet_link_tag 'harsh/spacecadet' %>
+<%= auto_discovery_link_tag :atom, formatted_posts_path( :atom ) %>
 </head>
 <body>
 	<div id="header" class="clearfix">
