--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing comment</h1>
 
-<% form_for(@comment) do |f| %>
+<% form_for([@post, @comment]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -44,5 +44,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Show', [@post, @comment] %> |
+<%= link_to 'Back', post_comments_path( @post ) %>
