Moved the blog to a new namespace/subdomain.

--- a/app/views/blog/posts/new.html.erb
+++ b/app/views/blog/posts/new.html.erb
@@ -1,2 +1,2 @@
 <%= render :partial => "shared/post_form", :locals => { :button_text => 'Create' } %>
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', blog_posts_path %>
