--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'shared/post', :collection => @posts  %>
 <% if admin? %>
 <hr />
-<%= link_to 'New post', new_post_path %>
+<%= link_to 'New post', new_blog_post_path %>
 <% end %>
