--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
 			<ul id="nav" class="clearfix">
-				<li><%= link_to "home", root_url %></li>
-				<li><%= link_to "blog", root_url %></li>
+				<li><%= link_to "home", www_root_url %></li>
+				<li><%= link_to "blog", blog_root_url %></li>
 				<li><%= link_to "code", "#" %></li>
 				<li><%= link_to "contact", "#" %></li>
 			</ul>
