--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <%= render 'layouts/stylesheets' %>
 <%= stylesheet_link_tag 'harsh/spacecadet' %>
-<%= auto_discovery_link_tag :atom, formatted_posts_path( :atom ) %>
+<%= auto_discovery_link_tag :atom, blog_posts_path( :atom ) %>
 </head>
 <body>
 	<div id="header" class="clearfix">
 		<div id="headercontent">
-			<h1><%= link_to '#codingPrime', root_url %></h1>
+			<h1><%= link_to '#codingPrime', www_root_url %></h1>
 			<p>
 				<span>&lt;blurb&gt;</span>insert witty text here<span>&lt;/blurb&gt;</span>
 			</p>
