--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,7 +1,7 @@
 <% if @preview -%>
 <%= render :partial => "shared/post_preview" %>
 <% end -%>
-<% form_for( @post ) do |f| %>
+<% form_for [:blog, @post] do |f| %>
 	<fieldset>
 		<%= f.error_messages %>
 		<p>
