--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,11 @@
-			<ul id="nav" class="clearfix">
-				<li><%= link_to "home", www_root_url %></li>
-				<li><%= link_to "blog", blog_root_url %></li>
-				<li><%= link_to "code", "#" %></li>
-				<li><%= link_to "contact", "#" %></li>
-			</ul>
+	<div id="nav">
+		<span class="fright">
+			<%=link_to "#codingPrime", www_root_url %>
+		</span>
+		<ul class="clearfix">
+			<li><%= link_to_unless request.subdomains.first.eql?( "home" ), "home", www_root_url%></li>
+			<li><%= link_to_unless request.subdomains.first.eql?( "blog" ), "blog", blog_root_url %></li>
+			<li><%= link_to "code", "#" %></li>
+			<li><%= link_to "contact", "#" %></li>
+		</ul>
+	</div>
