--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,7 @@
 			<%=link_to "#codingPrime", www_root_url %>
 		</span>
 		<ul class="clearfix">
-			<li><%= link_to_unless request.subdomains.first.eql?( "home" ), "home", www_root_url%></li>
+			<li><%= link_to_unless request.subdomains.first.eql?( "www" ), "home", www_root_url%></li>
 			<li><%= link_to_unless request.subdomains.first.eql?( "blog" ), "blog", blog_root_url %></li>
 			<li><%= link_to "code", "#" %></li>
 			<li><%= link_to "contact", "#" %></li>
