--- a/public/stylesheets/codingprime.css
+++ b/public/stylesheets/codingprime.css
@@ -159,31 +159,31 @@ dl.formfields dd {
 	position: absolute;
 	top: 0;
 	background-color: #000000;
-    width: 100%;
+	width: 100%;
 }
 
 #nav span a {
-  color: #ffffff;
-  text-decoration: none;
-  font-style: italic;
-  line-height: 2em;
-  margin-right: 2em;
+	color: #ffffff;
+	text-decoration: none;
+	font-style: italic;
+	line-height: 2em;
+	margin-right: 2em;
 }
 
 #nav ul {
 	text-decoration: none;
-	margin: 0;
-    width: 900px;
-    margin: 0 auto;
-    line-height: 2em;
+	width: 870px;
+	margin: 0 auto;
+	padding: 0;
+	line-height: 2em;
 }
 
 #nav ul li {
 	display: inline-block;
 	float: left;
 	width: 5em;
-    color: #ffe273;
-    font-variant: small-caps;
+	color: #ffe273;
+	font-variant: small-caps;
 }
 
 #nav ul li a {
@@ -231,7 +231,7 @@ dl.formfields dd {
 	background-color: #05316d;
     */
   background-color: #000000;
-	padding: 5px;
+	padding: 5px 0;
 	color: #ffffff;
     /*
 	border-right: 1px solid #000000;
@@ -241,8 +241,8 @@ dl.formfields dd {
 }
 
 #footer p {
-  width: 900px;
-  margin: 0 auto;
+	width: 870px;
+	margin: 0 auto;
 }
 
 /***********************
