--- a/app/views/blog/categories/new.html.erb
+++ b/app/views/blog/categories/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New category</h1>
 
-<% form_for(@category) do |f| %>
+<% form_for [:blog, @category] do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', blog_categories_path %>
