--- a/app/views/blog/posts/edit.html.erb
+++ b/app/views/blog/posts/edit.html.erb
@@ -1,2 +1,2 @@
 <%= render :partial => "shared/post_form", :locals => { :button_text => 'Update' } %>
-<%= link_to 'Show', @post %> | <%= link_to 'Back', posts_path %>
+<%= link_to 'Show', [:blog, @post] %> | <%= link_to 'Back', blog_posts_path %>
