--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -3,7 +3,8 @@
 				<span class="dateline"><%= post.created_at.to_s( :long_ordinal ) %></span>
 				<%= render_text( post.body ) %>
 				<% if admin? %>
-					<%= link_to 'Edit', edit_blog_post_path( post ) %>
+					<%= link_to 'Edit', edit_blog_post_path( post.id ) %>
+					<%= link_to 'Delete', blog_post_path( post.id ), :confirm => "Are you sure?", :method => :delete %>
 				<% end %>
 				<p>
 					Posted by <%= link_to post.user.name, www_root_url %>
