--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -1,6 +1,6 @@
 			<% div_for post do %>
 				<h2><%= link_to_unless_current h(post.title), post.url %></h2>
-				<span class="dateline"><%= post.created_at.to_s( :long_ordinal ) %></span>
+				<span class="dateline"><%= post.created_at.to_s( :long_ordinal ) %> in <%= link_to post.category.name, [:blog, post.category] %></span>
 				<%= render_text( post.body ) %>
 				<% if admin? %>
 					<%= link_to 'Edit', edit_blog_post_path( post.id ) %>
