Lots of comment work.

--- a/app/views/blog/comments/new.html.erb
+++ b/app/views/blog/comments/new.html.erb
@@ -1,47 +1,3 @@
-<h1>New comment</h1>
-
-<% form_for [:blog, @post, @comment] do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :user_name %><br />
-    <%= f.text_field :user_name %>
-  </p>
-  <p>
-    <%= f.label :user_site %><br />
-    <%= f.text_field :user_site %>
-  </p>
-  <p>
-    <%= f.label :user_email %><br />
-    <%= f.text_field :user_email %>
-  </p>
-  <p>
-    <%= f.label :comment_text %><br />
-    <%= f.text_area :comment_text %>
-  </p>
-  <p>
-    <%= f.label :user_ip %><br />
-    <%= f.text_field :user_ip %>
-  </p>
-  <p>
-    <%= f.label :user_agent %><br />
-    <%= f.text_field :user_agent %>
-  </p>
-  <p>
-    <%= f.label :referrer %><br />
-    <%= f.text_field :referrer %>
-  </p>
-  <p>
-    <%= f.label :post %><br />
-    <%= f.text_field :post %>
-  </p>
-  <p>
-    <%= f.label :approved %><br />
-    <%= f.check_box :approved %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
+<%= render :partial => 'shared/comment_form', :locals => { :comment => @comment } %>
 
 <%= link_to 'Back', blog_post_comments_path( @post ) %>
