--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => 'shared/post', :collection => [@post] %>
 <hr />
 <%= render :partial => 'shared/comment', :collection => @post.approved_comments %>
-<%= render :partial => 'shared/comment_form' %>
+<%= render :partial => 'shared/comment_form', :locals => { :comment => Comment.new } %>
 <% if admin? -%>
 <h3>Rejected Comments</h3>
 <%= render :partial => 'shared/comment', :collection => @post.rejected_comments %>
