--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -2,5 +2,8 @@
 				<strong><%= comment.user_site ? link_to( comment.user_name, comment.user_site ) : comment.user_name %></strong>
 				<%=h comment.created_at.to_s( :post_date ) %>
 				<%= render_text( comment.comment_text ) %>
+				<%- if admin? %>
+					<%= link_to 'Delete', blog_post_comment_path( @post.id, comment.id ), :confirm => "Are you sure?", :method => :delete %>
+				<%- end %>
 			<% end %>
 
