--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for [:blog, @post, Comment.new] do |f| %>
+<% form_for [:blog, @post, comment] do |f| %>
 	<fieldset>
 		<%= f.error_messages %>
 		<dl class="formfields">
