--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -6,10 +6,9 @@
 		<%= f.error_messages %>
 		<p>
 		<%= f.label :title, 'Title:' %> <%= f.text_field :title, :size => 60 %>
-		<%- if @post.new_record? %>
 		<br />
-		<%= f.label :category, 'Category:' %> <%= f.collection_select :category_id, @categories, :id, :name %>
-		<%- end %>
+		<%= f.label :category, 'Category:' %> 
+		<%= collection_select( :post, :category_id, Category.all, :id, :name ) %>
 		</p>
 		<p>
 		<%= f.label :body, 'Body:', :class => 'invisible' %>
