--- a/app/views/blog/posts/new.html.erb
+++ b/app/views/blog/posts/new.html.erb
@@ -1,2 +1,5 @@
-<%= render :partial => "shared/post_form", :locals => { :button_text => 'Create' } %>
+<%- if params[:preview_button] %>
+	<%= render @post %>
+<%- end %>
+<%= render :partial => "form", :locals => { :button_text => 'Create' } %>
 <%= link_to 'Back', blog_posts_path %>
