--- a/app/views/blog/posts/edit.html.erb
+++ b/app/views/blog/posts/edit.html.erb
@@ -1,2 +1,5 @@
-<%= render :partial => "post", :locals => { :button_text => 'Update' } %>
+<%- if params[:preview_button] %>
+	<%= render @post %>
+<%- end %>
+<%= render :partial => "form", :locals => { :button_text => 'Update' } %>
 <%= link_to 'Show', [:blog, @post] %> | <%= link_to 'Back', blog_posts_path %>
