--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,5 +1,5 @@
-<%= render :partial => 'post', :collection => @posts  %>
-<% if admin? %>
-<hr />
-<%= link_to 'New post', new_blog_post_path %>
-<% end %>
+<%= render :partial => 'post', :collection => @posts  -%>
+<%- if admin? -%>
+      <hr />
+      <%= link_to 'New post', new_blog_post_path %>
+<%- end -%>
