--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,43 +2,51 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title><%= page_title %></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<%= render 'layouts/stylesheets' %>
-<%= stylesheet_link_tag 'harsh/spacecadet' %>
-<%= auto_discovery_link_tag :atom, blog_posts_path( :atom ) %>
+  <title><%= page_title %></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<%= render 'layouts/stylesheets' -%>
+  <%= stylesheet_link_tag 'harsh/spacecadet' %>
+  <%= auto_discovery_link_tag :atom, blog_posts_path( :atom ) %>
 </head>
 <body>
-	<div id="header" class="clearfix">
-		<div id="headercontent">
-			<h1><%= link_to '#codingPrime', www_root_url %></h1>
-			<p>
-				<span>&lt;blurb&gt;</span>insert witty text here<span>&lt;/blurb&gt;</span>
-			</p>
-		</div>
-	</div>
-	<div id="container" class="clearfix">
-		<div id="content">
-<%= render 'shared/display_flash' %>
-<%= yield %>
-		</div>
-		<div id="sidebar">
-			<%= link_to image_tag( "gentoo-badge3.png" ), "http://www.gentoo.org" %>
-			<%= link_to image_tag( "palink.gif" ), "http://www.penny-arcade.com" %>
-			<%= link_to image_tag( "dronezone.gif" ), "http://www.somafm.com" %>
-			<h2>Categories</h2>
-			<ul>
-			<%- Category.all.each do |category| %>
-				<li><%= link_to category.name, [:blog, category] %></li>
-			<%- end %>
-			</ul>
-		</div>
-	</div>
-<%= render 'layouts/nav' %>
-	<div id="footer">
-		<p>
-			All content Copyright &copy; 2009-2010 Josh Williams
-		</p>
-	</div>
+  <div id="header" class="clearfix">
+    <div id="headercontent">
+      <h1><%= link_to '#codingPrime', www_root_url %></h1>
+      <p>
+        <span>&lt;blurb&gt;</span>insert witty text here<span>&lt;/blurb&gt;</span>
+      </p>
+    </div>
+  </div>
+  <div id="container" class="clearfix">
+    <div id="content">
+<%= render 'shared/display_flash' -%>
+<%= yield -%>
+    </div>
+    <div id="sidebar">
+      <%= link_to image_tag( "gentoo-badge3.png" ), "http://www.gentoo.org" %>
+      <%= link_to image_tag( "palink.gif" ), "http://www.penny-arcade.com" %>
+      <%= link_to image_tag( "dronezone.gif" ), "http://www.somafm.com" %>
+      <h2>Categories</h2>
+      <ul>
+      <%- Category.all.each do |category| -%>
+        <%- if category.posts.length > 0 -%>
+        <li><%= link_to category.name, [:blog, category] %><% if admin? -%>  <%= link_to "x", blog_category_path( category.slug ), :confirm => "Are you sure?", :method => :delete %><%- end -%></li>
+        <%- end -%>
+      <%- end -%>
+      </ul>
+    <%- if admin? -%>
+      <h2>Admin</h2>
+      <ul>
+        <li><%= link_to "New Category", new_blog_category_path %></li>
+      </ul>
+    <%- end -%>
+    </div>
+  </div>
+<%= render 'layouts/nav' -%>
+  <div id="footer">
+    <p>
+      All content Copyright &copy; 2009-2010 Josh Williams
+   </p>
+  </div>
 </body>
 </html>
