--- a/app/views/shared/_display_flash.html.erb
+++ b/app/views/shared/_display_flash.html.erb
@@ -1,6 +1,6 @@
-			<% if flash[:error] -%>
-			<p class="flash error"><%= flash[:error] %></p>
-			<% end -%>
-			<% if flash[:notice] -%>
-			<p class="flash notice"><%= flash[:notice] %></p>
-			<% end -%>
+      <%- if flash[:error] -%>
+      <p class="flash error"><%= flash[:error] %></p>
+      <%- end -%>
+      <%- if flash[:notice] -%>
+      <p class="flash notice"><%= flash[:notice] %></p>
+      <%- end -%>
