--- a/app/views/blog/comments/_form.html.erb
+++ b/app/views/blog/comments/_form.html.erb
@@ -2,12 +2,12 @@
           <fieldset>
             <%= f.error_messages %>
             <dl class="formfields">
-              <dt><%= f.label :user_name, 'Name' %></dt>
-              <dd><%= f.text_field :user_name, :size => 30 %></dd>
-              <dt><%= f.label :user_email, 'Email' %></dt>
-              <dd><%= f.text_field :user_email, :size => 30 %></dd>
-              <dt><%= f.label :user_site, 'Website URL' %></dt>
-              <dd><%= f.text_field :user_site, :size => 30 %></dd>
+              <dt><%= f.label :author_name, 'Name' %></dt>
+              <dd><%= f.text_field :author_name, :size => 30 %></dd>
+              <dt><%= f.label :author_email, 'Email' %></dt>
+              <dd><%= f.text_field :author_email, :size => 30 %></dd>
+              <dt><%= f.label :author_site, 'Website URL' %></dt>
+              <dd><%= f.text_field :author_site, :size => 30 %></dd>
               <dt><%= f.label :comment_text, 'Comment' %></dt>
               <dd><%= f.text_area :comment_text, :size => '60x12' %></dd>
             </dl>
