Added site configuration and did some styling

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,4 +1,5 @@
   <%= stylesheet_link_tag 'codingprime', :media => 'screen' %>
+  <%= stylesheet_link_tag "harsh/#{::AppConfig.harsh_theme}" %>
   <!--[if lte IE 7]>
   <%= stylesheet_link_tag 'ie', :media => 'screen' %>
   <![endif]-->
