--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => 'post', :collection => [@post] -%>
       <hr />
-      <a name="comments" />
+      <a name="comments"></a>
 <%= render @post.approved_comments -%>
 <%= render :partial => 'blog/comments/form', :locals => { :comment => Comment.new } -%>
 <% if admin? -%>
