--- a/app/views/blog/categories/show.html.erb
+++ b/app/views/blog/categories/show.html.erb
@@ -1,1 +1,3 @@
-<%= render @posts  %>
+<%= render :partial => 'shared/pagination', :locals => { :coll => @posts, :next_text => 'Older Posts >', :prev_text => '< Newer Posts' } %>
+<%= render @posts  -%>
+<%= render :partial => 'shared/pagination', :locals => { :coll => @posts, :next_text => 'Older Posts >', :prev_text => '< Newer Posts' } %>
