--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title><%= page_title %></title>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%= render 'layouts/stylesheets' -%>
   <%= auto_discovery_link_tag :atom, blog_posts_path( :atom ) %>
   <script type="text/javascript">
