--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <title><%= page_title %></title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%= render 'layouts/stylesheets' -%>
-  <%= auto_discovery_link_tag :atom, blog_posts_path( :atom ) %>
+  <%= auto_discovery_link_tag :atom, posts_path( :atom ) %>
   <script type="text/javascript">
   //<![CDATA[
     var _gaq = _gaq || [];
