--- a/app/views/blog/posts/index.html.haml
+++ b/app/views/blog/posts/index.html.haml
@@ -1,3 +1,3 @@
-= render :partial => 'shared/pagination', :locals => { :coll => @posts, :next_text => 'Older Posts >', :prev_text => '< Newer Posts' }
+= render 'pagination', coll: @posts, next_text: 'Older Posts >', prev_text: '< Newer Posts'
 = render @posts
-= render :partial => 'shared/pagination', :locals => { :coll => @posts, :next_text => 'Older Posts >', :prev_text => '< Newer Posts' }
+= render 'pagination', coll: @posts, next_text: 'Older Posts >', prev_text: '< Newer Posts'
