Minor bug fixes for comments

--- a/app/views/blog/comments/_comment.html.haml
+++ b/app/views/blog/comments/_comment.html.haml
@@ -5,4 +5,4 @@
   = simple_format(comment.comment_text)
   - unless comment.new_record?
     - if admin?
-      = link_to 'Delete', blog_comment_path(comment), confirm: 'Are you sure?', method: :delete
+      = link_to 'Delete', [:blog, comment], confirm: 'Are you sure?', method: :delete
