--- a/app/views/blog/categories/show.html.haml
+++ b/app/views/blog/categories/show.html.haml
@@ -1,3 +1,3 @@
 = render 'pagination', coll: @posts, next_text: 'Older Posts >', prev_text: '< Newer Posts'
 = render @posts
-= render 'shared/pagination', coll: @posts, next_text: 'Older Posts >', prev_text: '< Newer Posts'
+= render 'pagination', coll: @posts, next_text: 'Older Posts >', prev_text: '< Newer Posts'
