--- a/app/assets/stylesheets/application/style.css.scss
+++ b/app/assets/stylesheets/application/style.css.scss
@@ -116,7 +116,7 @@ dl.formfields dd {
   top: 0;
   background-color: #000000;
   width: 100%;
-  background-image: url( '../images/nav_bg.jpg' );
+  background-image: image_url('nav_bg.jpg');
   background-repeat: repeat-x;
 }
 
@@ -183,7 +183,7 @@ dl.formfields dd {
   background-color: #000000;
   padding: 5px 0;
   color: #ffffff;
-  background-image: url( '../images/nav_bg.jpg' );
+  background-image: image_url('nav_bg.jpg');
   background-repeat: repeat-x;
 }
 
